--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 ***********************************TOKUAH***********************************
 Descripción :
+            Juego educativo desarrollado por un grupo interdiciplinario de la Universidad Nacional de Salta (UNSa), basado en el proyecto "Barbie Seahorse Adventure" (http://www.imitationpickles.org/barbie/)
 
-En el directorio tokuah encontrará los archivos del juego, para descargarlos
-vaya a: http://github.com/pointtonull/Tokuah/archives/master 
+Archivos : 
+            En el directorio tokuah encontrará los archivos del juego, para descargarlos(http://github.com/pointtonull/Tokuah/archives/master) 
