--- a/README
+++ b/README
@@ -3,4 +3,16 @@ Descripción :
             Juego educativo desarrollado por un grupo interdiciplinario de la Universidad Nacional de Salta (UNSa), basado en el proyecto "Barbie Seahorse Adventure" (http://www.imitationpickles.org/barbie/)
 
 Archivos : 
-            En el directorio tokuah encontrará los archivos del juego, para descargarlos(http://github.com/pointtonull/Tokuah/archives/master) 
+            En el directorio tokuah encontrará los archivos del juego, para descargarlos(http://github.com/pointtonull/Tokuah/archives/master)
+
+Integrantes :
+            * Cabrera, Carlos Marcelo 
+            * Canchi Ramos, Luis Elbio Saúl
+            * Maza, Roberto Ariel
+            * Novoa Gundel, Matias Alberto 
+            * Padilla, José Tomás 
+            * Padilla, Martin Sebastian 
+            * Quiroga, Ricardo Daniel 
+            * Tolaba, Miguel Néstor 
+
+
