+ modificaciones al README

--- a/README
+++ b/README
@@ -1,9 +1,13 @@
-***********************************TOKUAH***********************************
+****************************************************************************
+**********************************TOKUAH************************************
+****************************************************************************
+
 Descripción :
             Juego educativo desarrollado por un grupo interdiciplinario de la Universidad Nacional de Salta (UNSa), basado en el proyecto "Barbie Seahorse Adventure" (http://www.imitationpickles.org/barbie/)
 
 Archivos : 
-            En el directorio tokuah encontrará los archivos del juego, para descargarlos(http://github.com/pointtonull/Tokuah/archives/master)
+            Puedes  descargar los archivos, ya sea en .zip o .tar desde
+            (http://github.com/pointtonull/Tokuah/archives/master)
 
 Integrantes :
             * Cabrera, Carlos Marcelo 
