+ modificaciones al README

--- a/README
+++ b/README
@@ -3,7 +3,10 @@
 ****************************************************************************
 
 Descripción :
-            Juego educativo desarrollado por un grupo interdiciplinario de la Universidad Nacional de Salta (UNSa), basado en el proyecto "Barbie Seahorse Adventure" (http://www.imitationpickles.org/barbie/)
+            Juego educativo desarrollado por un grupo interdiciplinario de
+            la Universidad Nacional de Salta (UNSa), basado en el proyecto
+            "Barbie Seahorse Adventure" 
+            (http://www.imitationpickles.org/barbie/)
 
 Archivos : 
             Puedes  descargar los archivos, ya sea en .zip o .tar desde
