agregado algo al TODO

--- a/master/TODO.txt
+++ b/master/TODO.txt
@@ -7,6 +7,7 @@
   - save-locator.py y esas cosas
   - iconos!!!
 - f2 = habilita/deshabilita sonido
+- Ajustar el nivel de dificultad del juego
 - Hacer que los pandas sean matables con muchos tiros y que, al matar uno, se vaya
   a un nivel especial.
 - Verificar niveles por la capacidad de saltar a lo más alto (no se debería golpear
