--- a/README
+++ b/README
@@ -21,6 +21,7 @@ Integrantes :
             * Canchi Ramos, Luis Elbio Saúl
             * Maza, Roberto Ariel
             * Novoa Gundel, Matias Alberto 
+            * Marco Antonio Mansilla
             * Padilla, José Tomás 
             * Padilla, Martin Sebastian 
             * Quiroga, Ricardo Daniel 
